1. Проверить байтовый поток [#858]